--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "lsst-epo/canto-dam-assets",
   "description": "This Craft CMS plugin adds a Field Type with GraphQL support for the Canto Digital Asset Management (DAM) web system",
   "type": "craft-plugin",
-  "version": "1.0.0-beta.2",
+  "version": "1.0.0",
   "require": {
     "php": ">=8.0.2",
     "craftcms/cms": "^4.4.0",
