--- a/buildchain/.eslintrc
+++ b/buildchain/.eslintrc
@@ -1,6 +1,5 @@
 {
   "root": true,
-  "parser": "vue-eslint-parser",
   "parserOptions": {
     "parser": "@typescript-eslint/parser",
     "ecmaVersion": 2020,
@@ -19,7 +18,6 @@
   ],
   "extends": [
     "eslint:recommended",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:vue/vue3-recommended"
+    "plugin:@typescript-eslint/recommended"
   ]
 }
