--- a/buildchain/package.json
+++ b/buildchain/package.json
@@ -32,6 +32,6 @@
     "lint": "npm run lint:ts && npm run lint:js && npm run lint:css",
     "lint:ts": "tsc --noEmit",
     "lint:js": "eslint './src/**/*.{js,ts}' --fix",
-    "lint:css": "stylelint './src/**/*.{css}' --fix"
+    "lint:css": "stylelint './src/**/*.{css}' --fix --allow-empty-input"
   }
 }
