chore: Updated copyright & license

--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
   "description": "This Craft CMS plugin adds a Field Type with GraphQL support for the Canto Digital Asset Management (DAM) web system",
   "type": "craft-plugin",
   "version": "4.0.0",
+  "license": "MIT",
   "require": {
     "php": ">=8.0.2",
     "craftcms/cms": "^4.4.0",
