--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
   "require-dev": {
     "craftcms/ecs": "dev-main",
     "craftcms/phpstan": "dev-main",
-    "craftcms/rector": "dev-main"
+    "craftcms/rector": "dev-main",
+    "verbb/super-table": "^3.0.0"
   },
   "scripts": {
     "phpstan": "vendor/bin/phpstan --ansi --memory-limit=1G",
